# weak2strong

./: .gitignore  README.md  analysis.ipynb  k_few_shot.ipynb  main.ipynb  multi-turn.ipynb  progress.md  pyproject.toml  requirements.txt
logs/: cross_model_logs.json  few_shot_logs.json
results/: cross_model_math_pgr.csv  few_shot_performance.json  model_math_performance.json
scripts/: run_pgr.py
src/: config.py  llm_client.py  math_dataset.py  pgr_experiment.py  prm800k_fix.py  utils.py
